--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "0.9.x",
+    "react-scripts": "3.0.1",
     "react-bootstrap": "latest",
     "react-scroll": "latest"
   },
@@ -17,9 +17,20 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "compile-sass": "node scripts/compile-sass.js",
-    "prefix-css": "node run compile-sass && postcss src/styles/*.css --use autoprefixer -d src/styles/",
     "remove-css": "rm src/styles/*.css && rm src/styles/*.map",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build -b master"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
